--- a/public/styles.css
+++ b/public/styles.css
@@ -106,6 +106,21 @@ div#banner #caption
 	margin-bottom: 10px;
 	color: #365899;
 }
+.macbook
+{
+	position: relative;
+	text-align: center;
+	margin-top: 50px;
+}
+.mac-title
+{
+	position: absolute;
+    width: 300px;
+    top: 45%;
+    left: 50%;
+    text-align: center;
+    margin-left: -150px;
+}
 
 
 
