--- a/public/styles.css
+++ b/public/styles.css
@@ -67,6 +67,14 @@ h5.title
 	padding-bottom: 15px;
 	text-align: center;
 }
+input:focus,
+select:focus,
+textarea:focus,
+button:focus 
+{
+    outline: none;
+}
+
 /**************
  *   HEADER   *
  **************/
@@ -103,7 +111,54 @@ nav ul li
     box-shadow: inset 0 -4px #4b4f56;
     transition: all .2s ease-in-out;
 }
-
+.search-bar
+{
+	width: 500px;
+    margin: 0 auto;
+    display: block;
+    margin-top: 10px;
+    padding: 5px;
+    border: none;
+    border-bottom: 1px solid #a5a5a5;
+}
+/***********************************
+ *   TYPEAHEAD OVERRIDING STYLES   *
+ ***********************************/
+.twitter-typeahead
+{
+	position: relative;
+    display: block !important;
+    width: 500px !important;
+    margin: 0 auto !important;
+}
+ul.typeahead.dropdown-menu
+{
+	top: 33px !important;
+    left: 50% !important;
+    width: 500px !important;
+    margin-left: -250px !important;
+}
+ul.typeahead.dropdown-menu>.active>a, ul.typeahead.dropdown-menu>.active>a:focus, ul.typeahead.dropdown-menu>.active>a:hover
+{
+	background-color: #ecf0f7;
+}
+div.tt-result
+{
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+span.result-name
+{
+	display: block;
+	font-size: 14px;
+	color: #34495E;
+	font-weight: 400;
+}
+span.result-phone-email
+{
+	color: #34495E;
+	font-size: 11px;
+}
 /**************
  *   FOOTER   *
  **************/
