--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,6 @@
+/**************
+ *   COMMON   *
+ **************/
 body
 {
 	background-color: #f8f8f8 !important; 
@@ -59,6 +62,10 @@ h5.title
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
+}
+.btn-xs
+{
+	font-size: 10px !important;
 }
 .loader
 {
